{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 55,
  "lineage": "0808e3a5-a1e5-304b-ceec-fb19e41566e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "proxy_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928805968684:security-group/sg-091bedee25588d46f",
            "description": "Security group for RDS Proxy",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091bedee25588d46f",
            "ingress": [],
            "name": "ots-erp-prod-proxy-sg",
            "name_prefix": "",
            "owner_id": "928805968684",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "ots-erp-prod-proxy-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ots-erp-prod-proxy-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05aaf2dd4ce8969c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928805968684:security-group/sg-04aa99715c24a4ef3",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04aa99715c24a4ef3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5432
              }
            ],
            "name": "ots-erp-prod-rds-sg",
            "name_prefix": "",
            "owner_id": "928805968684",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "prod",
              "Project": "ots-erp"
            },
            "tags_all": {
              "Env": "prod",
              "Project": "ots-erp"
            },
            "timeouts": null,
            "vpc_id": "vpc-05aaf2dd4ce8969c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL from RDS Proxy",
            "from_port": 5432,
            "id": "sgrule-2758683543",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04aa99715c24a4ef3",
            "security_group_rule_id": "sgr-0dc2635c979303449",
            "self": false,
            "source_security_group_id": "sg-091bedee25588d46f",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.proxy_sg",
            "aws_security_group.rds_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928805968684:network-acl/acl-0035c65ac89cfdb7c",
            "default_network_acl_id": "acl-0035c65ac89cfdb7c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0035c65ac89cfdb7c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "928805968684",
            "subnet_ids": [
              "subnet-03a2211a8fbffcf38",
              "subnet-04862ae432610cdb9",
              "subnet-069f28faec7b502a7",
              "subnet-06d86cdb55f1e01c2"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "ots-erp-prod-vpc-default",
              "Project": "ots-erp",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ots-erp-prod-vpc-default",
              "Project": "ots-erp",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05aaf2dd4ce8969c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928805968684:route-table/rtb-0fbc5803f550309d7",
            "default_route_table_id": "rtb-0fbc5803f550309d7",
            "id": "rtb-0fbc5803f550309d7",
            "owner_id": "928805968684",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "ots-erp-prod-vpc-default",
              "Project": "ots-erp",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ots-erp-prod-vpc-default",
              "Project": "ots-erp",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-05aaf2dd4ce8969c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928805968684:security-group/sg-04f4f296ce334ed2b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-04f4f296ce334ed2b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "928805968684",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "ots-erp-prod-vpc-default",
              "Project": "ots-erp",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ots-erp-prod-vpc-default",
              "Project": "ots-erp",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05aaf2dd4ce8969c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048ec587da49e45b8",
            "arn": "arn:aws:ec2:us-east-2:928805968684:elastic-ip/eipalloc-048ec587da49e45b8",
            "association_id": "eipassoc-098c9dbd9052e8ef0",
            "domain": "vpc",
            "id": "eipalloc-048ec587da49e45b8",
            "network_border_group": "us-east-2",
            "network_interface": "eni-081699a70aee6d3f4",
            "private_dns": "ip-10-0-101-149.us-east-2.compute.internal",
            "private_ip": "10.0.101.149",
            "public_dns": "ec2-3-139-118-44.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.118.44",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "ots-erp-prod-vpc-us-east-2a",
              "Project": "ots-erp",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ots-erp-prod-vpc-us-east-2a",
              "Project": "ots-erp",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928805968684:internet-gateway/igw-054134bc23f79c979",
            "id": "igw-054134bc23f79c979",
            "owner_id": "928805968684",
            "tags": {
              "Environment": "prod",
              "Name": "ots-erp-prod-igw",
              "Project": "ots-erp",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ots-erp-prod-igw",
              "Project": "ots-erp",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05aaf2dd4ce8969c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048ec587da49e45b8",
            "association_id": "eipassoc-098c9dbd9052e8ef0",
            "connectivity_type": "public",
            "id": "nat-09408cd9f41c60c29",
            "network_interface_id": "eni-081699a70aee6d3f4",
            "private_ip": "10.0.101.149",
            "public_ip": "3.139.118.44",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-069f28faec7b502a7",
            "tags": {
              "Environment": "prod",
              "Name": "ots-erp-prod-nat",
              "Project": "ots-erp",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ots-erp-prod-nat",
              "Project": "ots-erp",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0715bc39ebc7fa48a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09408cd9f41c60c29",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0715bc39ebc7fa48a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-054134bc23f79c979",
            "id": "r-rtb-089264a41b88434bc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-089264a41b88434bc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928805968684:route-table/rtb-0715bc39ebc7fa48a",
            "id": "rtb-0715bc39ebc7fa48a",
            "owner_id": "928805968684",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09408cd9f41c60c29",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "ots-erp-prod-private-rt",
              "Project": "ots-erp",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ots-erp-prod-private-rt",
              "Project": "ots-erp",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05aaf2dd4ce8969c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928805968684:route-table/rtb-089264a41b88434bc",
            "id": "rtb-089264a41b88434bc",
            "owner_id": "928805968684",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-054134bc23f79c979",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "ots-erp-prod-public-rt",
              "Project": "ots-erp",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ots-erp-prod-public-rt",
              "Project": "ots-erp",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05aaf2dd4ce8969c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d32cb6624ee100d0",
            "route_table_id": "rtb-0715bc39ebc7fa48a",
            "subnet_id": "subnet-04862ae432610cdb9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b75c4f5d5eb3bccc",
            "route_table_id": "rtb-0715bc39ebc7fa48a",
            "subnet_id": "subnet-06d86cdb55f1e01c2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000a03f2749de100c",
            "route_table_id": "rtb-089264a41b88434bc",
            "subnet_id": "subnet-069f28faec7b502a7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064ebd5d7d3c01b8a",
            "route_table_id": "rtb-089264a41b88434bc",
            "subnet_id": "subnet-03a2211a8fbffcf38"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928805968684:subnet/subnet-04862ae432610cdb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04862ae432610cdb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "928805968684",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "ots-erp-prod-private",
              "Project": "ots-erp",
              "Terraform": "true",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ots-erp-prod-private",
              "Project": "ots-erp",
              "Terraform": "true",
              "Type": "private"
            },
            "vpc_id": "vpc-05aaf2dd4ce8969c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928805968684:subnet/subnet-06d86cdb55f1e01c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d86cdb55f1e01c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "928805968684",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "ots-erp-prod-private",
              "Project": "ots-erp",
              "Terraform": "true",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ots-erp-prod-private",
              "Project": "ots-erp",
              "Terraform": "true",
              "Type": "private"
            },
            "vpc_id": "vpc-05aaf2dd4ce8969c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928805968684:subnet/subnet-069f28faec7b502a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069f28faec7b502a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "928805968684",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "ots-erp-prod-public",
              "Project": "ots-erp",
              "Terraform": "true",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ots-erp-prod-public",
              "Project": "ots-erp",
              "Terraform": "true",
              "Type": "public"
            },
            "vpc_id": "vpc-05aaf2dd4ce8969c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928805968684:subnet/subnet-03a2211a8fbffcf38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a2211a8fbffcf38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "928805968684",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "ots-erp-prod-public",
              "Project": "ots-erp",
              "Terraform": "true",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ots-erp-prod-public",
              "Project": "ots-erp",
              "Terraform": "true",
              "Type": "public"
            },
            "vpc_id": "vpc-05aaf2dd4ce8969c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928805968684:vpc/vpc-05aaf2dd4ce8969c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0035c65ac89cfdb7c",
            "default_route_table_id": "rtb-0fbc5803f550309d7",
            "default_security_group_id": "sg-04f4f296ce334ed2b",
            "dhcp_options_id": "dopt-0395b3373a19cb925",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05aaf2dd4ce8969c1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fbc5803f550309d7",
            "owner_id": "928805968684",
            "tags": {
              "Environment": "prod",
              "Name": "ots-erp-prod-vpc",
              "Project": "ots-erp",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ots-erp-prod-vpc",
              "Project": "ots-erp",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}